--- a/adnat (react)/frontend/src/components/Home/Home.css
+++ b/adnat (react)/frontend/src/components/Home/Home.css
@@ -10,6 +10,63 @@
   }
 }
 
+.home .logout {
+  font-weight: 300;
+  color: #ff0081;
+  cursor: pointer;
+  padding: 4px 8px 8px 8px;
+  border: 1px solid #ffe4e4;
+  border-radius: 5px;
+}
+.home .logout:hover {
+  border: 1px solid #fc8585;
+  border-radius: 5px;
+}
+.home .error {
+  margin: 10px;
+  padding: 10px;
+}
+.home .error div {
+  display: flex;
+}
+.home .section-title {
+  display: flex;
+  font-size: 24px;
+  line-height: 1.2;
+  margin: 10px;
+  padding: 10px;
+}
+.home .section-title .number {
+  border: 1px solid black;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+.home .section-title span {
+  text-align: center;
+  color: #333;
+  font-weight: 800;
+}
+
+.home .separator {
+  width: 100%;
+  margin: 20px 0px;
+  border-bottom: 1px solid #cecece;
+}
+
+.home .error p {
+  margin: 0px 5px;
+  padding: 0px 6px;
+  border: 1px solid black;
+  border-radius: 50%;
+}
+
+
+.home .edit-btn {
+  cursor: pointer;
+}
 .product-list {
   display: flex;
   flex-wrap: wrap;
@@ -18,8 +75,9 @@
 }
 
 .featured .featured-title {
+  display: flex;
+  justify-content: space-between;
   margin-top: 40px;
-  padding: 0 22px 16px;
 }
 
 .featured .featured-title span {
